--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -70,6 +70,9 @@ Rails/SkipsModelValidations:
   Exclude:
     - db/migrate/*.rb
 
+Rails/RakeEnvironment:
+  Enabled: false
+
 RSpec/Capybara/FeatureMethods:
   EnabledMethods:
     - feature
