Add USWDS view components

--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -54,3 +54,9 @@
     :why:
     :versions: []
     :when: 2021-12-10 21:58:44.000014000 Z
+- - :permit
+  - Hippocratic-3.0
+  - :who:
+    :why:
+    :versions: []
+    :when: 2021-12-11 17:27:39.560958000 Z
