--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -60,3 +60,9 @@
     :why:
     :versions: []
     :when: 2021-12-11 17:27:39.560958000 Z
+- - :permit
+  - Hippocratic 2.1
+  - :who:
+    :why:
+    :versions: []
+    :when: 2021-12-12 02:32:07.551920000 Z
