--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -13,6 +13,10 @@ jobs:
     services:
       postgres:
         image: postgres
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
         ports:
           - 5432:5432
         options: >-
@@ -28,10 +32,6 @@ jobs:
       with:
         bundler-cache: true
     - name: Setup database
-      env:
-        RAILS_ENV: test
-        PGHOST: localhost
-        PGUSER: postgres
       run: bundle exec rails db:create db:schema:load
     - run: bundle exec rspec
       name: Run specs
