--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -32,6 +32,8 @@ jobs:
       with:
         bundler-cache: true
     - name: Setup database
+      env:
+        DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
       run: bundle exec rails db:create db:schema:load
     - run: bundle exec rspec
       name: Run specs
