--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,7 @@ AllCops:
     - config.ru
     - db/schema.rb
     - node_modules/**/*
+    - vendor/bundle/**/*
 
 Style/Documentation:
   Enabled: false
