--- a/.github/workflows/brakeman.yml
+++ b/.github/workflows/brakeman.yml
@@ -12,6 +12,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Setup ruby
       uses: ruby/setup-ruby@v1
+      with:
         bundler-cache: true
     - name: Run brakeman
       run: bundle exec brakeman
