Move rubocop config

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -84,6 +84,7 @@ RSpec/FactoryBot/ConsistentParenthesesStyle:
 Rails/SkipsModelValidations:
   Exclude:
     - db/migrate/*.rb
+    - lib/tasks/import_post_roster.rake
 
 Rails/RakeEnvironment:
   Enabled: false
