Create slugs when creating officers from POST data

--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -2,5 +2,6 @@ RemoveUnusedMethodsInModelsCheck: {
   except_methods: [
     'Document#youtube_embed_src',
     'Officer#select_choices',
+    'Officer#slug_candidate',
   ]
 }
