Use a materialized view to improve performance
When listing officers by agency (or agencies by officer)

--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -1,5 +1,6 @@
 RemoveUnusedMethodsInModelsCheck: {
   except_methods: [
+    'AgencyOfficer#readonly?',
     'Document#youtube_embed_src',
     'Officer#select_choices',
     'Officer#slug_candidate',
