Create an LAPD headshot model

--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -4,5 +4,6 @@ RemoveUnusedMethodsInModelsCheck: {
     'Document#youtube_embed_src',
     'Officer#select_choices',
     'Officer#slug_candidate',
+    'LapdHeadshot#serial_number',
   ]
 }
