--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -5,5 +5,6 @@ RemoveUnusedMethodsInModelsCheck: {
     'Officer#select_choices',
     'Officer#slug_candidate',
     'LapdHeadshot#serial_number',
+    'Us::Ca::LosAngeles::Police::Headshots20230321::Headshot#serial_number',
   ]
 }
