Approve use of USWDS

--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -72,3 +72,9 @@
     :why:
     :versions: []
     :when: 2023-04-28 16:28:32.963174000 Z
+- - :approve
+  - "@uswds/uswds"
+  - :who:
+    :why:
+    :versions: []
+    :when: 2023-08-13 14:43:27.024326000 Z
