--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "sass": "^1.65.1"
   },
   "scripts": {
-    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules --load-path=node_modules/@uswds/uswds/packages"
+    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css ./app/assets/stylesheets/uswds.sass.scss:./app/assets/builds/uswds.css --no-source-map --load-path=node_modules --load-path=node_modules/@uswds/uswds/packages"
   }
 }
