--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -78,3 +78,10 @@
     :why:
     :versions: []
     :when: 2023-08-13 14:43:27.024326000 Z
+- - :license
+  - nio4r
+  - MIT
+  - :who:
+    :why:
+    :versions: []
+    :when: 2024-01-27 20:26:29.503710000 Z
